refactor to be java 17 compatible: replace switch-case with instanceof checks for type handling