@@ -449,7 +449,7 @@ public class LSMTreeIndexMutable extends LSMTreeIndexAbstract {
         if (LogManager.instance().isDebugEnabled())
           LogManager.instance().log(this, Level.FINE, "Put entry %s=%s in index '%s' (page=%s countInPage=%d newPage=%s thread=%d)",
               Arrays.toString(keys), Arrays.toString(rids), componentName, currentPage.getPageId(), count + 1, newPage,
-              Thread.currentThread().threadId());
+              Thread.currentThread().getId());
 
         if (writtenValues < values.length) {
           // NOT ALL THE VALUES HAVE BEEN WRITTEN, SPLIT THEM
