@@ -80,7 +80,7 @@ public class LSMTreeIndexTest extends TestHelper {
 
         total++;
         assertThat(results).hasSize(1);
-        assertThat((int) results.getFirst()).isEqualTo(i);
+        assertThat((int) results.get(0)).isEqualTo(i);
       }
 
       assertThat(total).isEqualTo(TOT);
@@ -1096,7 +1096,7 @@ public class LSMTreeIndexTest extends TestHelper {
                   if (threadInserted % 1000 == 0)
                     LogManager.instance()
                         .log(this, Level.INFO, "%s Thread %d inserted record %s, total %d records with key %d (total=%d)", null,
-                            getClass(), Thread.currentThread().threadId(), v.getIdentity(), i1, threadInserted,
+                            getClass(), Thread.currentThread().getId(), v.getIdentity(), i1, threadInserted,
                             crossThreadsInserted.get());
 
                   keyPresent = true;
@@ -1111,7 +1111,7 @@ public class LSMTreeIndexTest extends TestHelper {
                   assertThat(database.isTransactionActive()).isFalse();
                 } catch (final Exception e) {
                   LogManager.instance()
-                      .log(this, Level.SEVERE, "%s Thread %d Generic Exception", e, getClass(), Thread.currentThread().threadId());
+                      .log(this, Level.SEVERE, "%s Thread %d Generic Exception", e, getClass(), Thread.currentThread().getId());
                   assertThat(database.isTransactionActive()).isFalse();
                   return;
                 }
@@ -1120,16 +1120,16 @@ public class LSMTreeIndexTest extends TestHelper {
               if (!keyPresent)
                 LogManager.instance()
                     .log(this, Level.WARNING, "%s Thread %d Cannot create key %d after %d retries! (total=%d)", null, getClass(),
-                        Thread.currentThread().threadId(), i1, maxRetries, crossThreadsInserted.get());
+                        Thread.currentThread().getId(), i1, maxRetries, crossThreadsInserted.get());
 
             }
 
             LogManager.instance()
-                .log(this, Level.INFO, "%s Thread %d completed (inserted=%d)", null, getClass(), Thread.currentThread().threadId(),
+                .log(this, Level.INFO, "%s Thread %d completed (inserted=%d)", null, getClass(), Thread.currentThread().getId(),
                     threadInserted);
 
           } catch (final Exception e) {
-            LogManager.instance().log(this, Level.SEVERE, "%s Thread %d Error", e, getClass(), Thread.currentThread().threadId());
+            LogManager.instance().log(this, Level.SEVERE, "%s Thread %d Error", e, getClass(), Thread.currentThread().getId());
           }
         });
         futures.add(future);
